# Sentinel-MCP

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  config.example.yaml
docs/: 3_MINUTE_VIDEO_PLAN.md  API.md  DEPLOYMENT.md  ENHANCEMENTS.md  FILE_TEMPLATES.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_GUIDE.md  PHASE_4_5_COMPLETION.md  PHASE_6_COMPLETION.md  PROJECT_SUMMARY.md  REMEDIATION_AUTHORITY_RESPONSE.md  TESTING_GUIDE.md  VIDEO_DEMO_SCRIPT.md
examples/alerts/: config-drift.json  db-connections-high.json  disk-space-low.json  file-permissions.json  firewall-rules.json  helm-release.json  ingress-routing.json  io-bottleneck.json  network-latency.json  node-not-ready.json  oom-killer.json  pod-crashloop.json  process-profile.json  pvc-storage.json  queue-depth.json  replication-lag.json  service-down.json  tls-cert-expiring.json
k8s/: configmap.yaml  deployment.yaml  grafana-dashboard.yaml  rbac.yaml  service.yaml
prompts/: 01-scaffold.md  02-mcp-tools.md  03-watsonx.md  04-reasoning-engine.md  05-alert-and-docs.md  06-testing-and-demo.md
scripts/: demo.sh  test-failure.sh
src/: error.rs  main.rs
src/alert/: mod.rs
src/circuit_breaker/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/executor/: documentation.rs  mod.rs
src/mcp/: mod.rs  security.rs  tools.rs
src/mempalace/: mod.rs
src/metrics/: mod.rs
src/notifications/: mod.rs
src/plugins/: mod.rs
src/reasoning/: mod.rs
src/runbook/: mod.rs
src/snapshot/: mod.rs
src/watsonx/: mod.rs  prompts.rs
