[package]
name = "sentinel-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Paul Moore <paul@example.com>"]
description = "Autonomous infrastructure repair agent using IBM Bob and watsonx.ai"
license = "MIT"
repository = "https://github.com/paulmmoore3416/Sentinel-MCP"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP server
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Kubernetes
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# System information
sysinfo = "0.30"
nix = { version = "0.27", features = ["process", "signal"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
dotenvy = "0.15"
clap = { version = "4.4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Regex
regex = "1.10"

# Markdown
pulldown-cmark = "0.9"

# Random
rand = "0.8"

# System info
num_cpus = "1.16"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1